Configures DynamoDB models

--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "config": "^3.3.7",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
-    "dynamoose": "^2.8.5",
+    "dynamoose": "^1.11.1",
     "express": "^4.18.1",
     "express-interceptor": "^1.2.0",
     "get-parameter-names": "^0.3.0",
@@ -55,6 +55,7 @@
     "node-cache": "^5.1.2",
     "swagger-ui-express": "^4.4.0",
     "tc-core-library-js": "appirio-tech/tc-core-library-js.git#v2.6.7",
+    "topcoder-bus-api-wrapper": "topcoder-platform/tc-bus-api-wrapper.git",
     "uuid": "^8.3.2",
     "winston": "^3.7.2",
     "xss": "^1.0.11",
