--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,6 @@ typings/
 # CircleCI deployment env var files
 .circleci/*appvar.json
 .circleci/*deployvar.json
+
+# data generation test data
+test-data/
