Cleans up unused challenge-api code
* adds CLI flag to push generated course data to DynamoDB

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
+    "start:debug": "DEBUG=express:* node app.js",
     "lint": "eslint src --ext js,jsx",
     "lint:fix": "eslint src --ext js,jsx --fix",
     "init-db": "node src/init-db.js",
