--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "body-parser": "^1.20.0",
     "config": "^3.3.7",
     "cors": "^2.8.5",
+    "dd-trace": "^2.12.1",
     "dotenv": "^16.0.1",
     "dynamoose": "^2.8.5",
     "express": "^4.18.1",
