--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.3",
+    "mongodb": "^4.8.1",
     "node-cache": "^5.1.2",
     "swagger-ui-express": "^4.4.0",
     "tc-core-library-js": "appirio-tech/tc-core-library-js.git#v2.6.7",
