TCA-317 #comment This commit creates a queue helper for sending messages to SQS; generates the image upon certifcation completion; add a service for generating the message to be sent to the queue #time 6h

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "services:logs": "docker-compose -f ./local/docker-compose.yml logs",
     "local:init": "npm run local:reset && npm run seed-tables",
     "local:reset": "npm run init-db force",
-    "cert-gen:create-stack": "sh src/utils/certificate-image-generator/create-stack.sh"
+    "cert-gen:create-stack": "cd src/utils/certificate-image-generator/iac && sh create-stack.sh"
   },
   "author": "Topcoder.com",
   "license": "none",
