--- a/src/utils/certificate-image-generator/iac/certificate-image-generator.yml
+++ b/src/utils/certificate-image-generator/iac/certificate-image-generator.yml
@@ -1,13 +1,48 @@
 Description: TCA - Generate and serve certificate images and SSR
+
 Parameters:
+
     TCAGenerateCertificateQueueName:
         Type: String
         Description: TCA Generate Certificate Queue Name
-        Default: tca-generate-certificate"
+        Default: tca-generate-certificate
+
+    TCACertificateImageStoreName:
+        Type: String
+        Description: TCA Generate Certificate Queue Name
+        Default: tca-generate-certificate
+
 Resources:
+
     TCAGenerateCertificateQueue:
         Type: AWS::SQS::Queue
         DeletionPolicy: Delete
         Properties:
             QueueName:
                 Ref: TCAGenerateCertificateQueueName
+            ## TODO: AccessControl
+
+    TCACertificateImageStore:
+        Type: AWS::S3::Bucket
+        DeletionPolicy: Delete
+        Properties:
+            AccessControl: PublicRead
+            BucketName:
+                Ref: TCACertificateImageStoreName
+    TCACertificateImageStoreBucketPolicy:
+        Type: 'AWS::S3::BucketPolicy'
+        Properties:
+            PolicyDocument:
+                Id: MyPolicy
+                Version: 2012-10-17
+                Statement:
+                    -   Sid: PublicReadForGetBucketObjects
+                        Effect: Allow
+                        Principal: '*'
+                        Action: 's3:GetObject'
+                        Resource: !Join 
+                        - ''
+                        -   - 'arn:aws:s3:::'
+                            - !Ref TCACertificateImageStore
+                            - /*
+                Bucket: !Ref TCACertificateImageStore
