--- a/src/utils/certificate-image-generator/iac/certificate-image-generator.yml
+++ b/src/utils/certificate-image-generator/iac/certificate-image-generator.yml
@@ -3,7 +3,7 @@ Parameters:
     TCAGenerateCertificateQueueName:
         Type: String
         Description: TCA Generate Certificate Queue Name
-        Default: tca-generate-certificate"
+        Default: tca-generate-certificate
 Resources:
     TCAGenerateCertificateQueue:
         Type: AWS::SQS::Queue
