TCA-57 fix hosted zone id #time 5m

--- a/src/utils/certificate-image-generator/iac/certificate-image-generator.yml
+++ b/src/utils/certificate-image-generator/iac/certificate-image-generator.yml
@@ -98,7 +98,6 @@ Resources:
                 Ref: TCACertificateImageStoreAlias
             Type: A
             AliasTarget: 
-                # hard-coded zone id for all cloudfront routes
-                # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-aliastarget.html#cfn-route53-aliastarget-hostedzoneid
-                HostedZoneId: Z2FDTNDATAQYW2 
+                HostedZoneId:
+                    Ref: TCACertificateImageStoreAliasHostedZoneId 
                 DNSName: !GetAtt TCAGenerateCertificateCdn.DomainName
