TCA-57 #comment This commit improves the cert image generator README and fixes a bug w/the cloudformation config #time 30m

--- a/src/utils/certificate-image-generator/iac/certificate-image-generator.yml
+++ b/src/utils/certificate-image-generator/iac/certificate-image-generator.yml
@@ -98,6 +98,7 @@ Resources:
                 Ref: TCACertificateImageStoreAlias
             Type: A
             AliasTarget: 
-                HostedZoneId:
-                    Ref: TCACertificateImageStoreAliasHostedZoneId 
+                # hard-coded zone id for all cloudfront routes
+                # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-aliastarget.html#cfn-route53-aliastarget-hostedzoneid
+                HostedZoneId: Z2FDTNDATAQYW2 
                 DNSName: !GetAtt TCAGenerateCertificateCdn.DomainName
