--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "services:logs": "docker-compose -f ./local/docker-compose.yml logs",
     "local:init": "npm run local:reset && npm run seed-tables",
     "local:reset": "npm run init-db force",
-    "cert-gen:deploy-stack": "cd src/utils/certificate-image-generator/iac && sh deploy-stack.sh"
+    "cert-gen:deploy-stack": "cd src/utils/certificate-image-generator && sh deploy-stack.sh",
+    "cert-gen:validate": "cd src/utils/certificate-image-generator && aws cloudformation validate-template --template-body file://certificate-image-generator.yml"
   },
   "author": "Topcoder.com",
   "license": "none",
