--- a/src/utils/certificate-image-generator/certificate-image-generator-stack.yml
+++ b/src/utils/certificate-image-generator/certificate-image-generator-stack.yml
@@ -26,6 +26,11 @@ Parameters:
         Type: String
         Description: TCA Generate Certificate Image Store Alias Hosted Zone Id
 
+    # TODO: stage variable
+    TCACertificateImageGeneratorFunctionName:
+        Type: String
+        Description: TCA Generate Certificate Image Function Name
+
 Resources:
 
     TCAGenerateCertificateQueue:
@@ -102,3 +107,22 @@ Resources:
                 # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-aliastarget.html#cfn-route53-aliastarget-hostedzoneid
                 HostedZoneId: Z2FDTNDATAQYW2 
                 DNSName: !GetAtt TCAGenerateCertificateCdn.DomainName
+
+    TCACertificateImageGeneratorFunction:
+        Type: AWS::Lambda::Function
+        Properties: 
+            Code:
+                ZipFile: >
+                    def handler(event, context):
+                        pass
+            Description: Creates an image with a screenshot of a user's certificate
+            FunctionName: 
+                Ref: TCACertificateImageGeneratorFunctionName
+            Handler: index.handler
+            Layers: 
+                - arn:aws:lambda:us-east-1:764866452798:layer:chrome-aws-lambda:31
+            MemorySize: 1600
+            # TODO: don't hard-code this
+            Role: arn:aws:iam::811668436784:role/learning-paths-v5-container-role
+            Runtime: nodejs16.x
+            Timeout: 30
