TCA-318 #comment This is a WIP commit to troubleshoot the event params #time 5m

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "topcoder-learning-paths-api",
   "version": "1.0.0",
-  "description": "TopCoder Learning Paths V5 API",
+  "description": "Topcoder Learning Paths V5 API",
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
