Modifies lambda memory to 128MB
* usage shows approx 96MB required in practice

--- a/src/utils/mongodb-trigger-handler/serverless.yml
+++ b/src/utils/mongodb-trigger-handler/serverless.yml
@@ -31,6 +31,7 @@ custom:
 functions:
   trigger-handler:
     handler: handler.handle
+    memorySize: 128
     events:
       - eventBridge:
           eventBus: ${self:custom.aws.event_bus.${self:provider.stage}}
