TCA-319 #comment This commit reorganizes the existing lamdba/aws utils in prep for adding a new lambda #time 30m

--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "services:logs": "docker-compose -f ./local/docker-compose.yml logs",
     "local:init": "npm run local:reset && npm run seed-tables",
     "local:reset": "npm run init-db force",
-    "cert-gen:deploy-stack": "cd src/utils/certificate-image-generator && sh deploy-stack.sh",
-    "cert-gen:validate": "cd src/utils/certificate-image-generator && aws cloudformation validate-template --template-body file://certificate-image-generator-stack.yml"
+    "cert-gen:deploy-stack": "cd src/utils/certificate-sharing/generate-certificate-image && sh generate-certificate-image-deploy.sh",
+    "cert-gen:validate": "d src/utils/certificate-sharing/generate-certificate-image && aws cloudformation validate-template --template-body file://certificate-image-generator-stack.yml"
   },
   "author": "Topcoder.com",
   "license": "none",
