TCA-319 improve readme and add shortcut scripts #time 5m

--- a/src/utils/certificate-sharing/certificate-ssr/package.json
+++ b/src/utils/certificate-sharing/certificate-ssr/package.json
@@ -1,12 +1,13 @@
 {
     "name": "tca-certificate-ssr",
     "version": "1.0.0",
-    "description": "",
+    "description": "Serverless function to wrap a TCA certificate image in SSR html so dynamic images can be shared.",
     "main": "handler.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "deploy": "sls deploy",
+        "offline": "sls offline"
     },
-    "author": "",
+    "author": "Brooke Souza",
     "license": "ISC",
     "type": "module",
     "dependencies": {
