TCA-474 #comment This commit creates a shared cert image url helper so the ssr lambda and the main API can use the same methods for creating image urls. It also cleans up the API after the moving of the files. It also converts the SSR lambda from a module to commonjs so that it can use the shared cert image helper. It also changes the SSR lambda to use path params instead of query params. Finally, it changes the naming convention of the image generator lambda to use the sls naming conventions. #time 4h

--- a/src/utils/certificate-sharing/certificate-ssr/package.json
+++ b/src/utils/certificate-sharing/certificate-ssr/package.json
@@ -9,10 +9,10 @@
     },
     "author": "Brooke Souza",
     "license": "ISC",
-    "type": "module",
+    "type": "commonjs",
     "dependencies": {
         "fs": "^0.0.1-security",
-        "url-exist": "^3.0.1"
+        "url-exists": "^1.0.3"
     },
     "devDependencies": {
         "serverless-offline": "^10.1.0"
