--- a/src/utils/certificate-sharing/certificate-ssr/serverless.yml
+++ b/src/utils/certificate-sharing/certificate-ssr/serverless.yml
@@ -10,8 +10,12 @@ functions:
     handler: handler.index
     events:
       - httpApi:
-          path: /
+          path: /{handle}/{certification}/{title}
           method: get
+    # TODO: TCA-482 use the .env in the main app
+    # rather than an env.json specifically for this 
+    # function
+    environment: ${file(env.${opt:stage, 'dev'}.json)}
 
 plugins:
   - serverless-offline
