TCA-474 #comment This commit changes the cert image  URL to include the provider #time 30m

--- a/src/utils/certificate-sharing/certificate-ssr/serverless.yml
+++ b/src/utils/certificate-sharing/certificate-ssr/serverless.yml
@@ -10,7 +10,7 @@ functions:
     handler: handler.index
     events:
       - httpApi:
-          path: /{handle}/{certification}/{title}
+          path: /{handle}/{provider}/{certification}/{title}
           method: get
     # TODO: TCA-482 use the .env in the main app
     # rather than an env.json specifically for this 
