--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "local:init": "npm run local:reset && npm run seed-tables",
     "local:reset": "npm run init-db force",
     "cert-gen:deploy-stack": "cd src/utils/certificate-sharing/generate-certificate-image && sh generate-certificate-image-deploy.sh",
+    "cert-gen:regenerate": "node src/utils/certificate-sharing/regenerate-certificate-images/RegenerateCertificateImagesService.js",
     "cert-gen:validate": "d src/utils/certificate-sharing/generate-certificate-image && aws cloudformation validate-template --template-body file://certificate-image-generator-stack.yml"
   },
   "author": "Topcoder.com",
