--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "eslint": "^8.17.0",
     "mocha": "^10.0.0",
     "mocha-prepare": "^0.1.0",
-    "nyc": "^15.1.0"
+    "nyc": "^15.1.0",
+    "prisma": "^4.5.0"
   },
   "dependencies": {
+    "@prisma/client": "^4.5.0",
     "aws-sdk": "^2.1148.0",
     "axios": "^0.27.2",
     "bluebird": "^3.7.2",
