--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "prisma": "^4.5.0"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.209.0",
     "@prisma/client": "^4.5.0",
     "aws-sdk": "^2.1148.0",
     "axios": "^0.27.2",
