--- a/src/utils/udemy-course-fetcher/serverless.yml
+++ b/src/utils/udemy-course-fetcher/serverless.yml
@@ -72,7 +72,7 @@ resources:
    
 functions:
   courseLoader:
-    handler: src/utils/udemy-course-fetcher/src/course_fetcher.handleCourses
+    handler: src/course_fetcher.handleCourses
     events:
       - eventBridge:
           enabled: true
