Implements service to auto-complete an FCC course
* updates MongoDB trigger handler to handle multiple Mongo changes at once

--- a/src/utils/mongodb-trigger-handler/serverless.yml
+++ b/src/utils/mongodb-trigger-handler/serverless.yml
@@ -32,6 +32,7 @@ functions:
   trigger-handler:
     handler: handler.handle
     memorySize: 128
+    timeout: 30
     events:
       - eventBridge:
           eventBus: ${self:custom.aws.event_bus.${self:provider.stage}}
