--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "mocha": "^10.0.0",
     "mocha-prepare": "^0.1.0",
     "nyc": "^15.1.0",
-    "prisma": "^4.5.0"
+    "prisma": "^4.5.0",
+    "sequelize-cli": "^6.5.2"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "3.208.0",
@@ -61,6 +62,10 @@
     "moment": "^2.29.3",
     "mongodb": "^4.8.1",
     "node-cache": "^5.1.2",
+    "pg": "^8.8.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.27.0",
+    "sequelize-auto": "^0.8.8",
     "swagger-ui-express": "^4.4.0",
     "tc-core-library-js": "appirio-tech/tc-core-library-js.git#v2.6.7",
     "topcoder-bus-api-wrapper": "topcoder-platform/tc-bus-api-wrapper.git",
