--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -80,8 +80,7 @@ workflows:
           context : org-global
           filters:
             branches:
-              only:
-                - develop
+              only: develop
 
       # Production builds are exectuted only on tagged commits to the
       # master branch.
