--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start:debug": "DEBUG=express:* node app.js",
     "dev": "nodemon app.js",
     "generate-courses": "node src/utils/course-generator/generate-courses.js",
+    "migrate-tca-courses": "node src/utils/tca-data-migrator/migrate_courses.js",
+    "migrate-tca-progress": "node src/utils/tca-data-migrator/migrate_progress.js",
     "lint": "eslint src --ext js,jsx",
     "lint:fix": "eslint src --ext js,jsx --fix",
     "init-db": "node src/init-db.js",
