Implements Topcoder Certification completion
* fixes updates to CertResourceProgress so they track the status of the associated FCC cert progress
* adds new endpoint to complete a CertResourceProgress from the client when the associated FCC cert is completed
* adds logic to check if all of the Topcoder Certification requirements have been completed and completes it if so
* adds migration to add a short UUID field and index for same to the CertResourceProgress to use as a shortcut for accessing the cert
* renames a cervice that had an extra 's' on the end of the name

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "3.208.0",
+    "@paralleldrive/cuid2": "^2.0.1",
     "@prisma/client": "^4.5.0",
     "aws-sdk": "^2.1148.0",
     "axios": "^0.27.2",
@@ -66,11 +67,11 @@
     "moment": "^2.29.3",
     "mongodb": "^4.8.1",
     "node-cache": "^5.1.2",
-    "stripe": "^11.3.0",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.27.0",
     "sequelize-auto": "^0.8.8",
+    "stripe": "^11.3.0",
     "swagger-ui-express": "^4.4.0",
     "tc-core-library-js": "appirio-tech/tc-core-library-js.git#v2.6.7",
     "topcoder-bus-api-wrapper": "topcoder-platform/tc-bus-api-wrapper.git",
