--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ install_dependency: &install_dependency
 install_deploysuite: &install_deploysuite
   name: Installation of install_deploysuite.
   command: |
-    git clone --branch v1.4.10 https://github.com/topcoder-platform/tc-deploy-scripts ../buildscript
+    git clone --branch v1.4.14 https://github.com/topcoder-platform/tc-deploy-scripts ../buildscript
     cp ./../buildscript/master_deploy.sh .
     cp ./../buildscript/buildenv.sh .
     cp ./../buildscript/awsconfiguration.sh .
@@ -63,6 +63,14 @@ jobs:
       APPNAME: "learning-paths-api"    
     steps: *builddeploy_steps
 
+  "build-qa":
+    <<: *defaults
+    environment:
+      DEPLOY_ENV: "QA"
+      LOGICAL_ENV: "qa"
+      APPNAME: "learning-paths-api"    
+    steps: *builddeploy_steps
+
   "build-prod":
     <<: *defaults
     environment:
@@ -81,6 +89,13 @@ workflows:
           filters:
             branches:
               only: develop
+
+      # Development builds are executed on "develop" branch only.
+      - "build-qa":
+          context : org-global
+          filters:
+            branches:
+              only: qa
 
       # Production builds are exectuted only on tagged commits to the
       # master branch.
