--- a/src/utils/mongodb-trigger-handler/serverless.yml
+++ b/src/utils/mongodb-trigger-handler/serverless.yml
@@ -13,6 +13,7 @@ custom:
     event_bus:
       dev: arn:aws:events:us-east-1:811668436784:event-bus/aws.partner/mongodb.com/stitch.trigger/62fd7e5d44baed229f34af0b
       prod: arn:aws:events:us-east-1:409275337247:event-bus/aws.partner/mongodb.com/stitch.trigger/631fc2f7fc22d1c4d9c41750
+      qa: arn:aws:events:us-east-1:811668436784:event-bus/aws.partner/mongodb.com/stitch.trigger/62fd7e5d44baed229f34af0b      
   auth0:
     dev:
       url: ${env:AUTH0_URL}
@@ -24,9 +25,15 @@ custom:
       audience: ${env:AUTH0_AUDIENCE}
       client_id: ${env:AUTH0_CLIENT_ID}
       client_secret: ${env:AUTH0_CLIENT_SECRET}
+    qa:
+      url: ${env:AUTH0_URL}
+      audience: ${env:AUTH0_AUDIENCE}
+      client_id: ${env:AUTH0_CLIENT_ID}
+      client_secret: ${env:AUTH0_CLIENT_SECRET}      
   learning_paths_api:
     dev: https://api.topcoder-dev.com/v5/learning-paths/certification-progresses/complete-lesson-via-mongo-trigger
     prod: https://api.topcoder.com/v5/learning-paths/certification-progresses/complete-lesson-via-mongo-trigger
+    qa: https://api.topcoder-dev.com/v5/learning-paths/certification-progresses/complete-lesson-via-mongo-trigger
 
 functions:
   trigger-handler:
