--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@paralleldrive/cuid2": "^2.0.1",
     "@prisma/client": "^4.5.0",
     "aws-sdk": "^2.1148.0",
+    "aws-sdk-js-codemod": "^0.14.1",
     "axios": "^0.27.2",
     "bluebird": "^3.7.2",
     "body-parser": "^1.20.0",
